--- a/package.json
+++ b/package.json
@@ -8,16 +8,21 @@
   },
   "dependencies": {
     "element-plus": "^1.1.0-beta.20",
+    "js-cookie": "^3.0.1",
+    "nprogress": "^0.2.0",
     "rollup-plugin-terser": "^7.0.2",
-    "vue": "^3.2.16"
+    "vue": "^3.2.16",
+    "vue-router": "^4.0.4",
+    "vuex-router-sync": "^5.0.0"
   },
   "devDependencies": {
+    "@types/nprogress": "^0.2.0",
     "@vitejs/plugin-vue": "^1.9.3",
-    "typescript": "^4.4.3",
-    "vite": "^2.6.4",
-    "vue-tsc": "^0.3.0",
     "node-sass": "^4.5.3",
     "sass": "^1.32.8",
-    "sass-loader": "8.0.0"
+    "sass-loader": "8.0.0",
+    "typescript": "^4.4.3",
+    "vite": "^2.6.4",
+    "vue-tsc": "^0.3.0"
   }
 }
