--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "rollup-plugin-terser": "^7.0.2",
     "vue": "^3.2.16",
     "vue-router": "^4.0.4",
+    "vuex": "^4.0.2",
     "vuex-router-sync": "^5.0.0"
   },
   "devDependencies": {
