--- a/package.json
+++ b/package.json
@@ -7,6 +7,7 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "axios": "^0.23.0",
     "element-plus": "^1.1.0-beta.20",
     "js-cookie": "^3.0.1",
     "nprogress": "^0.2.0",
@@ -17,6 +18,7 @@
     "vuex-router-sync": "^5.0.0"
   },
   "devDependencies": {
+    "@types/js-cookie": "^3.0.0",
     "@types/nprogress": "^0.2.0",
     "@vitejs/plugin-vue": "^1.9.3",
     "node-sass": "^4.5.3",
