--- a/package.json
+++ b/package.json
@@ -7,8 +7,8 @@
     "preview": "vite preview"
   },
   "dependencies": {
-    "axios": "^0.23.0",
-    "element-plus": "^1.1.0-beta.20",
+    "axios": "^0.24.0",
+    "element-plus": "^1.2.0-beta.6",
     "js-cookie": "^3.0.1",
     "nprogress": "^0.2.0",
     "rollup-plugin-terser": "^7.0.2",
@@ -18,14 +18,15 @@
     "vuex-router-sync": "^5.0.0"
   },
   "devDependencies": {
+    "eslint": "^8.4.1",
     "@types/js-cookie": "^3.0.0",
     "@types/nprogress": "^0.2.0",
     "@vitejs/plugin-vue": "^1.9.3",
-    "node-sass": "^4.5.3",
-    "sass": "^1.32.8",
-    "sass-loader": "8.0.0",
-    "typescript": "^4.4.3",
-    "vite": "^2.6.4",
+    "node-sass": "^7.0.0",
+    "sass": "^1.45.0",
+    "sass-loader": "12.4.0",
+    "typescript": "^4.5.4",
+    "vite": "^2.7.2",
     "vue-tsc": "^0.3.0"
   }
 }
