--- a/package.json
+++ b/package.json
@@ -20,8 +20,13 @@
   "devDependencies": {
     "@types/js-cookie": "^3.0.1",
     "@types/nprogress": "^0.2.0",
+    "@typescript-eslint/eslint-plugin": "^5.10.0",
+    "@typescript-eslint/parser": "^5.10.0",
     "@vitejs/plugin-vue": "^1.10.2",
     "eslint": "^8.5.0",
+    "eslint-plugin-html": "^6.2.0",
+    "eslint-plugin-import": "^2.25.4",
+    "eslint-plugin-vue": "^8.3.0",
     "node-sass": "^7.0.1",
     "sass": "^1.45.2",
     "sass-loader": "12.4.0",
