--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
     "element-plus": "^1.2.0-beta.6",
     "js-cookie": "^3.0.1",
     "nprogress": "^0.2.0",
+    "pinia": "^2.0.9",
     "rollup-plugin-terser": "^7.0.2",
     "vue": "^3.2.26",
     "vue-router": "^4.0.12",
