--- a/package.json
+++ b/package.json
@@ -33,7 +33,7 @@
     "sass": "^1.53.0",
     "sass-loader": "12.4.0",
     "typescript": "^4.7.4",
-    "vite": "^2.9.14",
+    "vite": "3.0.2",
     "vue-tsc": "^0.3.0"
   }
 }
