--- a/package.json
+++ b/package.json
@@ -12,7 +12,7 @@
     "element-plus": "^1.3.0-beta.10",
     "js-cookie": "^3.0.1",
     "nprogress": "^0.2.0",
-    "pinia": "^2.0.21",
+    "pinia": "^2.0.22",
     "rollup-plugin-terser": "^7.0.2",
     "vue": "^3.2.38",
     "vue-router": "^4.1.5",
@@ -22,8 +22,8 @@
   "devDependencies": {
     "@types/js-cookie": "^3.0.2",
     "@types/nprogress": "^0.2.0",
-    "@typescript-eslint/eslint-plugin": "^5.36.1",
-    "@typescript-eslint/parser": "^5.36.1",
+    "@typescript-eslint/eslint-plugin": "^5.36.2",
+    "@typescript-eslint/parser": "^5.36.2",
     "@vitejs/plugin-vue": "^1.10.2",
     "eslint": "^8.23.0",
     "eslint-plugin-html": "^6.2.0",
@@ -33,7 +33,7 @@
     "sass": "^1.54.8",
     "sass-loader": "12.4.0",
     "typescript": "^4.8.2",
-    "vite": "3.0.2",
+    "vite": "^3.0.2",
     "vue-tsc": "^0.3.0"
   }
 }
