feat: init plugins

--- a/jsconfig.json
+++ b/jsconfig.json
@@ -10,6 +10,7 @@
       "modules/*": ["./src/modules/*"],
       "router/*": ["./src/router/*"],
       "widgets/*": ["./src/widgets/*"],
+      "plugins/*": ["./src/plugins/*"],
       "mixins/*": ["./src/mixins/*"]
     }
   },
