--- a/package.json
+++ b/package.json
@@ -9,7 +9,7 @@
   },
   "dependencies": {
     "axios": "^0.26.1",
-    "element-plus": "^1.3.0-beta.10",
+    "element-plus": "^2.2.26",
     "js-cookie": "^3.0.1",
     "nprogress": "^0.2.0",
     "pinia": "^2.0.27",
