--- a/package.json
+++ b/package.json
@@ -27,9 +27,7 @@
     "pinia": "^2.0.28",
     "rollup-plugin-terser": "^7.0.2",
     "vue": "^3.2.45",
-    "vue-router": "^4.1.6",
-    "vuex": "^4.1.0",
-    "vuex-router-sync": "^5.0.0"
+    "vue-router": "^4.1.6"
   },
   "devDependencies": {
     "@types/js-cookie": "^3.0.2",
