--- a/package.json
+++ b/package.json
@@ -34,7 +34,7 @@
     "@types/nprogress": "^0.2.0",
     "@typescript-eslint/eslint-plugin": "^5.59.6",
     "@typescript-eslint/parser": "^5.59.6",
-    "@vitejs/plugin-vue": "^1.10.2",
+    "@vitejs/plugin-vue": "^4.2.3",
     "eslint": "^8.40.0",
     "eslint-plugin-html": "^6.2.0",
     "eslint-plugin-import": "^2.27.5",
@@ -43,7 +43,10 @@
     "sass": "^1.62.1",
     "sass-loader": "12.4.0",
     "typescript": "^4.9.5",
+    "unplugin-auto-import": "^0.16.0",
+    "unplugin-vue-components": "^0.24.1",
     "vite": "^3.2.6",
+    "vite-svg-loader": "^4.0.0",
     "vue-tsc": "^0.3.0"
   }
 }
