--- a/tsconfig.json
+++ b/tsconfig.json
@@ -1,5 +1,12 @@
 {
   "compilerOptions": {
+    "declaration": false,
+    "noImplicitAny": false,
+    "removeComments": true,
+    "noLib": false,
+    "experimentalDecorators": true,
+    "forceConsistentCasingInFileNames": true,
+    
     "target": "esnext",
     "useDefineForClassFields": true,
     "module": "esnext",
@@ -9,7 +16,15 @@
     "sourceMap": true,
     "resolveJsonModule": true,
     "esModuleInterop": true,
+    "skipLibCheck": true,
+    "allowSyntheticDefaultImports": true,
     "lib": ["esnext", "dom"],
+    "types": [
+      "vite/client",
+      "jest",
+      "node",
+      "element-plus/global"
+    ],
     "baseUrl": "./",
     "paths": {
       "@/*": ["./src/*"],
@@ -19,9 +34,16 @@
       "modules/*": ["./src/modules/*"],
       "router/*": ["./src/router/*"],
       "widgets/*": ["src/widgets/*"],
-      "plugins/*": ["src/plugins/*"],
-      "mixins/*": ["./src/mixins/*"]
+      "plugins/*": ["./src/plugins/*"],
     }
   },
-  "include": ["src/**/*.ts", "src/**/*.d.ts", "src/**/*.tsx", "src/**/*.vue"]
+  "include": [
+    "src/**/*.ts",
+    "src/**/*.d.ts",
+    "src/**/*.tsx",
+    "src/**/*.vue",
+    "./auto-imports.d.ts", // 全局API声明
+    "./components.d.ts", // 全局组件声明
+  ],
+  "exclude": ["node_modules"]
 }
