--- a/tsconfig.json
+++ b/tsconfig.json
@@ -37,6 +37,7 @@
     "src/**/*.tsx",
     "src/**/*.vue",
     "./auto-imports.d.ts", // 全局API声明
+    "src/@types/index.d.ts",
   ],
   "exclude": ["node_modules"]
 }
