--- a/package.json
+++ b/package.json
@@ -27,6 +27,14 @@
     "nprogress": "^0.2.0",
     "pinia": "^2.1.4",
     "rollup-plugin-terser": "^7.0.2",
+    "postcss": "^8.4.24",
+    "postcss-html": "^1.5.0",
+    "postcss-scss": "^4.0.6",
+    "stylelint": "^15.9.0",
+    "stylelint-config-recommended-scss": "^12.0.0",
+    "stylelint-config-recommended-vue": "^1.4.0",
+    "stylelint-config-standard": "^33.0.0",
+    "stylelint-config-standard-scss": "9.0.0",
     "vue": "^3.3.4",
     "vue-router": "^4.2.2"
   },
