feat: component import glob

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -6,7 +6,10 @@
     "noLib": false,
     "experimentalDecorators": true,
     "forceConsistentCasingInFileNames": true,
-    
+    "types": [
+      "vite/client",
+      "node",
+    ],
     "target": "esnext",
     "useDefineForClassFields": true,
     "module": "esnext",
