--- a/package.json
+++ b/package.json
@@ -21,33 +21,33 @@
   },
   "dependencies": {
     "@element-plus/icons-vue": "^2.3.1",
-    "@vueuse/core": "^10.9.0",
-    "axios": "^1.6.8",
-    "element-plus": "^2.6.3",
+    "@vueuse/core": "^10.11.1",
+    "axios": "^1.7.7",
+    "element-plus": "2.8.8",
     "js-cookie": "^3.0.5",
     "nprogress": "^0.2.0",
-    "pinia": "^2.1.7",
+    "pinia": "^2.2.6",
     "rollup-plugin-terser": "^7.0.2",
-    "vue": "^3.4.21",
-    "vue-router": "^4.3.0"
+    "vue": "^3.5.13",
+    "vue-router": "^4.4.5"
   },
   "devDependencies": {
     "@types/js-cookie": "^3.0.6",
-    "@types/node": "^20.12.5",
+    "@types/node": "^20.17.6",
     "@types/nprogress": "^0.2.3",
     "@typescript-eslint/eslint-plugin": "^5.62.0",
     "@typescript-eslint/parser": "^5.62.0",
     "@vitejs/plugin-vue": "^4.6.2",
-    "eslint": "^8.57.0",
+    "eslint": "^8.57.1",
     "eslint-plugin-html": "^7.1.0",
-    "eslint-plugin-import": "^2.29.1",
-    "eslint-plugin-vue": "^9.24.0",
-    "sass": "^1.74.1",
-    "typescript": "^5.4.4",
+    "eslint-plugin-import": "^2.31.0",
+    "eslint-plugin-vue": "^9.31.0",
+    "sass": "^1.81.0",
+    "typescript": "^5.6.3",
     "unocss": "^0.53.6",
     "unplugin-auto-import": "^0.16.7",
     "unplugin-vue-components": "^0.24.1",
-    "vite": "^4.5.3",
+    "vite": "^4.5.5",
     "vite-svg-loader": "^4.0.0",
     "vue-tsc": "^1.8.27"
   }
